# GLBoy

./: .gitignore  CMakeLists.txt  README.markdown  TODO  glboy.sln  love_formula2.txt  love_formula3.txt  wave_plane.txt  wave_plane4.txt  wave_plane9.txt  web-app-dispatch-sample.html
GLBoy.xcodeproj/: project.pbxproj
GLBoy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
OpenVR/: OpenVR.vcxproj  OpenVR.vcxproj.filters  ReadMe.txt  openvr_player.cpp  openvr_player.hpp
PSurfaceVRJNI/: PSurfaceVRJNI.cpp  PSurfaceVRJNI.vcxproj  PSurfaceVRJNI.vcxproj.filters  ReadMe.txt  mysketch_PSurfaceVR.h  stdafx.cpp
andro/: AndroPlayer.cpp  AndroPlayer.hpp  glboy_AndroPlayer.h
glboy/: Bezier2D.cpp__  BlurHorizonShader.cpp  BlurShader.cpp  BlurVerticleShader.cpp  Boy.cpp  Boy.hpp  CMakeLists.txt  Color.cpp  Color.hpp  ColorCutShader.cpp  Common.cpp  Common.hpp  DefaultColorShader.cpp  EllipseShader.cpp  FBObject.cpp  FBObject.hpp  GLBoy.cpp  GLBoy.hpp  GLBoy.vcxproj  GLBoy.vcxproj.filters  GlowFBO.cpp  GlowFBO.hpp  Graphics.cpp  Graphics.hpp  GraphicsPostShader.cpp  Line.cpp  Line.hpp  Object.cpp  Object.hpp  Player.cpp  Player.hpp  QuadraticBezierShader.cpp  ReadMe.txt  Shader.cpp  Shader.hpp  SimpleLightShader.cpp  SimpleTextureShader.cpp  TextureMergeShader.cpp  Triangle.cpp  Triangle.hpp  (+3 more)
glfw/: CMakeLists.txt  GLFW.vcxproj  GLFW.vcxproj.filters  ReadMe.txt  fwplayer.cpp  fwplayer.hpp
myboys/: Makefile  memo
myboys/Bezier/: bezier.cpp  bezier.vcxproj  bezier.vcxproj.filters
myboys/BezierProcessingMethod/: BezierProcessingMethod.vcxproj  BezierProcessingMethod.vcxproj.filters  bezier_processing_method.cpp
myboys/GLBoy_glfw.xcodeproj/: project.pbxproj
myboys/GLBoys.xcodeproj/: project.pbxproj
myboys/HelloOpenVR/: HelloOpenVR.cpp  HelloOpenVR.vcxproj  HelloOpenVR.vcxproj.filters
myboys/Sample01/: Sample01.vcxproj  Sample01.vcxproj.filters
myboys/WavePlane01/: WavePlane01.vcxproj  WavePlane01.vcxproj.filters  wave_plane01.cpp
myboys/src/: CMakeLists.txt  bezier.cpp  bezier_processing_method.cpp  bezier_triangle.cpp  color_cut.cpp  cull_face.cpp  dynamic_vertex.cpp  ellipse.cpp  glow.cpp  line.cpp  quadratic_bezier.cpp  rotate.cpp  sample01.cpp  testing.cpp  testing.h  triangle_background.cpp  wave_plane01.cpp
osx/OSX/: AppDelegate.swift  GLBoyWrapper.mm  OSX-Bridging-Header.h  ViewController.swift
osx/OSX.xcodeproj/: project.pbxproj
osx/OSXTests/: OSXTests.swift
osx/OSXUITests/: OSXUITests.swift
osxplayer/OSXplayer/: GLBoyWrapper.h  GLBoyWrapper.mm  GLView.swift  Info.plist
osxplayer/OSXplayer.xcodeproj/: project.pbxproj
osxplayer/OSXplayerTests/: OSXplayerTests.swift
processing/Leaf/: Leaf.pde
processing/lens_flare/: lens_flare.pde
processing/line_move_in_surface/: line_move_in_surface.pde
processing/love_formula/: love_formula.pde
processing/splash_watch/: splash_watch.pde
src/: .sconsign.dblite  CMakeLists.txt  Cassette.cpp  Color.cpp  DefaultColorShader.cpp  DefaultColorShader.hpp  Object.cpp  Player.cpp  SConstruct  Shader.cpp  Shader.hpp  SimpleLightShader.cpp  SimpleLightShader.hpp  SimpleTextureShader.cpp  SimpleTextureShader.hpp  glboy.cpp  glboy.hpp  texture.cpp
(+46 files in other folders)
